src/objects/Festival__c.object
<CustomObject>
    <fields>
        <fullName>Crowd_Capacity__c</fullName>
        <description>The number of persons can attend the Festival.</description>
        <label>Crowd Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date when the Festival ends.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <description>Date when The Festival start.</description>
        <label>Start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Festival</label>
    <nameField>
        <label>Festival Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festivals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>